# Ubi-JavaScript_Backend_Framework_For_Learning

./: Cargo.toml  README.md  dprint.json  main.js  ubi2
libs/: index.html  pn
project/: Cargo.toml  build.rs  config.json
project/src/: declare_c.rs  main.rs
project/src/server/: mod.rs  tes.rs
routes/: index.html  server.ts  ui.ubi
src/: main.rs  main.txt
